--- a/src/client.html
+++ b/src/client.html
@@ -11,48 +11,68 @@
       <h1>Pixel Gradient Animation</h1>
     </header>
     <main>
-      <form id="form">
-        <div class="input-group">
-          <label for="input-canvas-width">Canvas width (pixels)</label>
-          <input type="number" name="canvasWidth" id="input-canvas-width" value="400" min="1">
+      <div class="ui-block" id="controls">
+        <form id="form">
+          <div class="input-group">
+            <label for="input-canvas-width">Canvas width (pixels)</label>
+            <input type="number" name="canvasWidth" id="input-canvas-width" value="400" min="1" pattern="\d*">
+          </div>
+          <div class="input-group">
+            <label for="input-canvas-height">Canvas height (pixels)</label>
+            <input type="number" name="canvasHeight" id="input-canvas-height" value="300" min="1" pattern="\d*">
+          </div>
+          <div class="input-group">
+            <label for="input-scaling-factor">Gradient Pixel Upscale Factor</label>
+            <input type="number" name="scalingFactor" id="input-scaling-factor" value="4" min="1" pattern="\d*">
+          </div>
+          <div class="input-group">
+            <label>Gradient Direction</label>
+            <table>
+              <tr>
+                <td>
+                    <input type="radio" name="gradientDirection" id="input-gradient-direction-1" value="RIGHT" checked>
+                    <label class="label-radio" for="input-gradient-direction-1">➡️ Right</label>
+                </td>
+                <td>
+                    <input type="radio" name="gradientDirection" id="input-gradient-direction-2" value="LEFT">
+                    <label class="label-radio" for="input-gradient-direction-2">⬅️ Left</label>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                    <input type="radio" name="gradientDirection" id="input-gradient-direction-3" value="UP">
+                    <label class="label-radio" for="input-gradient-direction-3">⬆️ Up</label>
+                </td>
+                <td>
+                    <input type="radio" name="gradientDirection" id="input-gradient-direction-4" value="DOWN">
+                    <label class="label-radio" for="input-gradient-direction-4">⬇️ Down</label>
+                </td>
+              </tr>
+            </table>
+          </div>
+          <div class="input-group">
+            <label for="input-canvas-text">Canvas Text</label>
+            <input type="text" name="canvasText" id="input-canvas-text" value="G R A D I E N T">
+          </div>
+          <div class="input-group">
+            <label for="input-gradient-color-1">Gradient Color 1</label>
+            <input type="color" name="gradientColor1" id="input-gradient-color-1" value="#9bff4f">
+            <label for="input-gradient-color-2">Gradient Color 2</label>
+            <input type="color" name="gradientColor2" id="input-gradient-color-2" value="#b429be">
+          </div>
+          <div class="input-group">
+            <input type="submit" value="Preview">
+            <input type="button" id="button-gif-render" value="Render as GIF">
+          </div>
+        </form>
+        <div id="gif-container">
+          <p id="gif-render-progress"></p>
+          <p id="gif-link-container"></p>
         </div>
-        <div class="input-group">
-          <label for="input-canvas-height">Canvas height (pixels)</label>
-          <input type="number" name="canvasHeight" id="input-canvas-height" value="300" min="1">
-        </div>
-        <div class="input-group">
-          <label for="input-scaling-factor">Gradient Pixel Upscale Factor</label>
-          <input type="number" name="scalingFactor" id="input-scaling-factor" value="4" min="1">
-        </div>
-        <div class="input-group">
-          <label>Gradient Direction</label>
-          <input type="radio" name="gradientDirection" id="input-gradient-direction-1" value="RIGHT" checked>
-          <label for="input-gradient-direction-1">➡️ Right</label>
-          <input type="radio" name="gradientDirection" id="input-gradient-direction-2" value="LEFT">
-          <label for="input-gradient-direction-2">⬅️ Left</label>
-          <input type="radio" name="gradientDirection" id="input-gradient-direction-3" value="UP">
-          <label for="input-gradient-direction-3">⬆️ Up</label>
-          <input type="radio" name="gradientDirection" id="input-gradient-direction-4" value="DOWN">
-          <label for="input-gradient-direction-4">⬇️ Down</label>
-        </div>
-        <div class="input-group">
-          <label for="input-canvas-text">Canvas Text</label>
-          <input type="text" name="canvasText" id="input-canvas-text" value="G R A D I E N T">
-        </div>
-        <div class="input-group">
-          <label for="input-gradient-color-1">Gradient Color 1</label>
-          <input type="color" name="gradientColor1" id="input-gradient-color-1" value="#9bff4f">
-          <label for="input-gradient-color-2">Gradient Color 2</label>
-          <input type="color" name="gradientColor2" id="input-gradient-color-2" value="#b429be">
-        </div>
-        <input type="submit" value="Preview">
-      </form>
-      <div id="canvas-container"></div>
-      <form id="form-gif-render">
-        <input type="submit" id="form-gif-render-submit" value="Render as GIF">
-        <label for="form-gif-render-submit" id="gif-render-progress"></label>
-      </form>
-      <div id="gif-link-container"></div>
+      </div>
+      <div class="ui-block" id="preview">
+        <div id="canvas-container"></div>
+      </div>
     </main>
     <footer>
       <p>Credits:</p>
