Client content updates

--- a/src/client.html
+++ b/src/client.html
@@ -82,9 +82,11 @@
         <li>GIF Library: <a href="https://github.com/jnordberg/gif.js">gif.js</a></li>
       </ul>
       <p>
-        <a href="https://glitch.com/edit/#!/remix/pixel-gradient-animated">Remix on Glitch</a>
+        <a href="https://glitch.com/edit/#!/remix/animated-pixel-gradients">Remix on Glitch</a>
       </p>
-      <!-- <div class="font-loader">.</div> -->
+      <p>
+        <a href="https://github.com/noahleigh/animated-pixel-gradients">Fork on Github</a>
+      </p>
     </footer>
   </body>
 </html>
