Added .js extensions to imports

--- a/test/test.html
+++ b/test/test.html
@@ -8,6 +8,6 @@
     <script src="./test.js" type="module"></script>
 </head>
 <body>
-
+    <p>Open the console to see test errors.</p>
 </body>
 </html>
