--- a/src/client.html
+++ b/src/client.html
@@ -14,12 +14,14 @@
       <div class="ui-block" id="controls">
         <form id="form">
           <div class="input-group">
-            <label for="input-canvas-width">Canvas width (pixels)</label>
-            <input type="number" name="canvasWidth" id="input-canvas-width" value="400" min="1" pattern="\d*">
-          </div>
-          <div class="input-group">
-            <label for="input-canvas-height">Canvas height (pixels)</label>
-            <input type="number" name="canvasHeight" id="input-canvas-height" value="300" min="1" pattern="\d*">
+            <div class="input-group-inline">
+              <label for="input-canvas-width">Width (pixels)</label>
+              <input type="number" name="canvasWidth" id="input-canvas-width" value="400" min="1" pattern="\d*">
+            </div>
+            <div class="input-group-inline">
+              <label for="input-canvas-height">Height (pixels)</label>
+              <input type="number" name="canvasHeight" id="input-canvas-height" value="300" min="1" pattern="\d*">
+            </div>
           </div>
           <div class="input-group">
             <label for="input-scaling-factor">Gradient Pixel Upscale Factor</label>
@@ -55,10 +57,14 @@
             <input type="text" name="canvasText" id="input-canvas-text" value="G R A D I E N T">
           </div>
           <div class="input-group">
-            <label for="input-gradient-color-1">Gradient Color 1</label>
-            <input type="color" name="gradientColor1" id="input-gradient-color-1" value="#9bff4f">
-            <label for="input-gradient-color-2">Gradient Color 2</label>
-            <input type="color" name="gradientColor2" id="input-gradient-color-2" value="#b429be">
+              <div class="input-group-inline">
+                <label for="input-gradient-color-1">Gradient Color 1</label>
+                <input type="color" name="gradientColor1" id="input-gradient-color-1" value="#9bff4f">
+              </div>
+              <div class="input-group-inline">
+                <label for="input-gradient-color-2">Gradient Color 2</label>
+                <input type="color" name="gradientColor2" id="input-gradient-color-2" value="#b429be">
+              </div>
           </div>
           <div class="input-group">
             <input type="submit" value="Preview">
