spectrum color picker test

--- a/src/client.html
+++ b/src/client.html
@@ -24,7 +24,7 @@
             </div>
           </div>
           <div class="input-group">
-            <label for="input-scaling-factor">Gradient Pixel Upscale Factor</label>
+            <label for="input-scaling-factor">Gradient Pixel Size</label>
             <input type="number" name="scalingFactor" id="input-scaling-factor" value="4" min="1" pattern="\d*">
           </div>
           <div class="input-group">
