Added fontSize control

--- a/src/client.html
+++ b/src/client.html
@@ -53,8 +53,12 @@
             </table>
           </div>
           <div class="input-group">
-            <label for="input-canvas-text">Canvas Text</label>
+            <label for="input-canvas-text">Text</label>
             <input type="text" name="canvasText" id="input-canvas-text" value="G R A D I E N T">
+          </div>
+          <div class="input-group">
+            <label for="input-canvas-font-size">Font Size</label>
+            <input type="number" name="canvasFontSize" id="input-canvas-font-size" value="30" min="10" step="10">
           </div>
           <div class="input-group">
               <div class="input-group-inline">
