Updated credits list

--- a/src/client.html
+++ b/src/client.html
@@ -90,6 +90,8 @@
         <li>Font: <a href="https://www.dafont.com/visitor.font">Visitor</a></li>
         <li>Event Loop: <a href="https://github.com/IceCreamYou/MainLoop.js">MainLoop.js</a></li>
         <li>GIF Library: <a href="https://github.com/jnordberg/gif.js">gif.js</a></li>
+        <li>Font Rendering: <a href="https://github.com/nodebox/opentype.js">opentype.js</a></li>
+        <li>Mobile Color Picker: <a href="https://github.com/bgrins/spectrum">spectrum</a></li>
       </ul>
       <p>
         <a href="https://glitch.com/edit/#!/remix/animated-pixel-gradients">Remix on Glitch</a>
