--- a/src/client.html
+++ b/src/client.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Animated Pixel Gradients</title>
+    <title>Animated Pixel Gradients Maker</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
-      <h1>Animated Pixel Gradients</h1>
+      <h1>Animated Pixel Gradients Maker</h1>
     </header>
     <main>
       <div class="ui-block" id="controls">
